--- a/style.css
+++ b/style.css
@@ -26,8 +26,18 @@ h2 {
 .logos {
     background-color: #3d795d;
     padding: 10px;
+    margin-top: 5px;
+    text-align: center;
 }
 
 .logo {
     width: 200px !important;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.fa {
+    margin: 10px;
+    font-size: 30px !important;
+    color: black;
 }
